Instructions for preprocessing

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ BA_result_Rick_04_11
 epipolar_lines/
 epipolar_video.mp4
 reconstruction.mp4
+3d_point_plots/
+combined.mp4
+combined/
+points_through_time.mp4
