--- a/bundle-adjust.yml
+++ b/bundle-adjust.yml
@@ -57,17 +57,31 @@ dependencies:
   - zipp=3.1.0=py_0
   - zlib=1.2.11=h1de35cc_3
   - pip:
+    - ansi2html==1.5.2
     - black==20.8b1
+    - brotli==1.0.9
     - chardet==3.0.4
     - cycler==0.10.0
+    - dash==1.16.3
+    - dash-core-components==1.12.1
+    - dash-html-components==1.1.1
+    - dash-renderer==1.8.2
+    - dash-table==4.10.1
     - easydict==1.9
+    - flask==1.1.2
+    - flask-compress==1.7.0
     - future==0.18.2
+    - h5py==2.10.0
     - idna==2.10
+    - itsdangerous==1.1.0
+    - jinja2==2.11.2
     - jsonschema==3.2.0
+    - jupyter-dash==0.3.1
     - kaleido==0.0.3.post1
     - kiwisolver==1.2.0
     - kornia==0.4.0
     - llvmlite==0.34.0
+    - markupsafe==1.1.1
     - matplotlib==3.3.1
     - nbformat==5.0.7
     - numba==0.51.1
@@ -90,5 +104,5 @@ dependencies:
     - torch==1.6.0
     - tqdm==4.48.2
     - urllib3==1.25.10
-prefix: /Users/Sunsmeister/opt/anaconda3/envs/msbr
+    - werkzeug==1.0.1
 
