--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,15 @@
-mouseRunningData/
-mouseRunningData.zip
-images_test
-rick_plots
 __pycache__/
-BA_result_Rick_04_11
 epipolar_lines/
 epipolar_video.mp4
 reconstruction.mp4
 3d_point_plots/
 combined.mp4
 combined/
-points_through_time.mp4
 data
 .vscode
 params.json
 reprojections/
 traces/
-preprocessing/frames/
 configs/
-movies/
+results/
+analysis/
