new sawtell config

--- a/configs/sawtell.yaml
+++ b/configs/sawtell.yaml
@@ -30,12 +30,12 @@ point_sizes: 4
 bp_names:
 - head
 - chin_base
-- chin_1_4
-- chin_mid
-- chin_3_4
-- chin_end
+- chin1_4
+- chin_half
+- chin3_4
+- chin_tip
 - mid
-- tail
+- tail_neck
 - caudal_d
 - caudal_v
 - worm_1
@@ -43,21 +43,23 @@ bp_names:
 - worm_3
 - worm_4
 - worm_5
+- pectoral_L
+- pectoral_R
+- pectoral_L_base
+- pectoral_R_base
+
 
 skeleton:
-- [caudal_d, tail]
-- [caudal_v, tail]
-- [tail, mid]
-- [mid, head]
-- [head, chin_base]
-- [chin_base, chin_1_4]
-- [chin_1_4, chin_mid]
-- [chin_mid, chin_3_4]
-- [chin_3_4, chin_end]
-- [worm_1, worm_2]
-- [worm_2, worm_3]
-- [worm_3, worm_4]
-- [worm_4, worm_5]
+  - [chin_base, head]
+  - [chin1_4, chin_base]
+  - [chin_half, chin1_4]
+  - [chin3_4, chin_half]
+  - [chin_tip, chin3_4]
+  - [mid, head]
+  - [worm_1, worm_2]
+  - [worm_2, worm_3]
+  - [worm_3, worm_4]
+  - [worm_4, worm_5]
 
 color_list:
 - blue
@@ -75,3 +77,10 @@ color_list:
 - yellow
 - yellow
 - yellow
+- purple
+- purple
+
+view_names:
+  - top
+  - main
+  - right
